bynkc/tests/fixtures/positive/67_context_with_types/src/commerce/orders.bynk
context commerce.orders {
  type OrderId = String where Matches("ORD-[0-9]+")

  type OrderStatus = enum {
    Pending,
    Placed,
    Cancelled,
  }
}
