bynkc/tests/fixtures/negative/273_property_matches_needs_pin/src/demo/d.bynk
commons demo.d

type Code = String where Matches("[A-Z]+")
